[gd_scene load_steps=5 format=3 uid="uid://rgumhnym5ugn"]

[ext_resource type="Script" path="res://core/levels/level.gd" id="1_fwc7w"]
[ext_resource type="PackedScene" uid="uid://miigpbg6n0xu" path="res://core/gui/inventory/inventory.tscn" id="3_4to8e"]
[ext_resource type="PackedScene" uid="uid://dyk64akerw7hq" path="res://core/gui/logger/logger.tscn" id="4_drqxg"]
[ext_resource type="PackedScene" uid="uid://lnpyq0wr320h" path="res://core/gui/inventory/loot_menu.tscn" id="4_re2f6"]

[node name="Level" type="Node2D"]
script = ExtResource("1_fwc7w")

[node name="TileMap" type="TileMap" parent="." groups=["Tilemap"]]
z_index = -1
z_as_relative = false
format = 2

[node name="PointOfInterests" type="Node2D" parent="."]

[node name="Objects" type="Node2D" parent="."]

[node name="Scenery" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]

[node name="AudioListener" type="AudioListener2D" parent="."]
current = true

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Inventory" parent="Menu" instance=ExtResource("3_4to8e")]

[node name="LootMenu" parent="Menu" instance=ExtResource("4_re2f6")]

[node name="Logger" parent="Menu" instance=ExtResource("4_drqxg")]
z_index = 4096

[node name="SpawnPoints" type="Node2D" parent="."]
